crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_unknown_spec_struct_literal.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
UNSUPPORTED rejects_unknown_spec_struct_literal
  unknown spec struct `Unknown`
  src/main.rs:2:1: 2:42

stderr:
