crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_unsafe_block_leftover_dealloc_token.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
expression: result
---
status: Some(1)
stdout:
PASS produce_dealloc_token
  all assertions discharged
FAIL rejects_unsafe_block_leftover_dealloc_token
  unsafe exit leaves unreflected heap resources
  src/main.rs:11:5: 14:6
PASS main
  all assertions discharged

stderr:
