crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_unsafe_function_leftover_raw_req.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
expression: result
---
status: Some(1)
stdout:
FAIL leaves_dealloc_token
  unsafe function return leaves unconsumed heap resources
  src/main.rs:4:2: 4:2
PASS main
  all assertions discharged

stderr:
