crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_unsafe_lemma_missing_resource_req.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
FAIL rejects_unsafe_lemma_missing_resource_req
  resource precondition failed
  src/main.rs:14:13: 14:18
PASS main
  all assertions discharged

stderr:
