crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_unsupported_initial_state.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
expression: snapshot_output(output)
---
status: Some(1)
stdout:
UNSUPPORTED rejects_unsupported_initial_state
  unsupported type [i32; 3_usize]
  src/main.rs:2:1: 2:50

stderr:
