crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_unused_invalid_lemma_prepass.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
expression: snapshot_output(output)
---
status: Some(1)
stdout:
FAIL prepass
  lemma `bad` assertion failed
  lemma `bad`

stderr:
