crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_vec_initial_state.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
UNSUPPORTED rejects_vec_initial_state
  generic structs are unsupported: std::vec::Vec<i32, std::alloc::Global>
  src/main.rs:1:1: 1:43

stderr:
